# yasr

./: README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/actions/poetry/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: main.yml  on_push_main.yml  on_push_test_app.yml  on_push_test_cdk.yml  test_app.yml  test_cdk.yml
docker/ghacontainer/: Dockerfile
docker/gunicorn/: Dockerfile  installPackagesGdal.sh
