[tool.poetry]
name = "yasr-python"
version = "0.1.0"
description = ""
authors = ["Mikko Solismaa <mikko.solismaa@spatineo.com>"]
readme = "README.md"
packages = [{include = "yasr_python"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"


[tool.poetry.group.aws.dependencies]
aws-cdk-lib = "^2.65.0"


[tool.poetry.group.release.dependencies]
python-semantic-release = "^7.33.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
